pkl-core/src/test/files/LanguageSnippetTests/input/errors/power/typeConstraints1.pkl
foo: String(this == "foo") = "bar"
